src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Date__c</fullName>
        <label>Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assign_to_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Assign to Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Client Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <inlineHelpText>This field is automatically populated with today&apos;s date when the Task Status is set to Completed and there is no Completion Date provided.</inlineHelpText>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Format__c</fullName>
        <label>Event Type</label>
        <picklist>
            <picklistValues>
                <fullName>Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting - External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FYI_List__c</fullName>
        <label>FYI List</label>
        <picklist>
            <picklistValues>
                <fullName>abuff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sdola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMesc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>restr</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <label>Import ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Event_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Event Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Meaningful_Activity_Flat__c</fullName>
        <label>Meaningful Activity Flat</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Meaningful_Activity__c</fullName>
        <label>Meaningful Activity</label>
        <picklist>
            <picklistValues>
                <fullName>Last ADV Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Estate Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Financial Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Fund Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Goals Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Insurance Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last IPS Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Issue Questionnaire Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Portfolio Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Privacy Notice Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Rebalancing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Risk Tolerance Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Last Tax Plan Review</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Process_ID__c</fullName>
        <label>Process ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Step_ID__c</fullName>
        <label>Process Step ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Send_FYI__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send FYI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Event__c</fullName>
        <label>Event Sub-Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tradeshow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting- Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting- External</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Go To Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conference Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sub_Category_Task__c</fullName>
        <label>Task Sub-Category</label>
        <picklist>
            <controllingField>Category__c</controllingField>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Open/Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charitable Giving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investment Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategic Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Do</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trades: Cash Mgmt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trades: Rebal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transfer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Task_Duration__c</fullName>
        <inlineHelpText>This field is not related to the activity durations used by the Task Timer functionality.  It is a separate field that allows for the manual entry of time spent on a Task.  You must enter the task duration in quarter hour increments.  Ex.  1.25, .25, .50</inlineHelpText>
        <label>Task Duration (Manual)</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Note</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ToDo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Timer_Billable_Hours__c</fullName>
        <inlineHelpText>This is the roll-up of the amount of timed activities where the billable checkbox was checked.</inlineHelpText>
        <label>Timer Billable Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timer_Non_Billable_Hours__c</fullName>
        <inlineHelpText>This is the roll-up of the amount of timed activities where the billable checkbox was NOT checked.</inlineHelpText>
        <label>Timer Non Billable Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timer_Total__c</fullName>
        <formula>Timer_Billable_Hours__c +  Timer_Non_Billable_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the sum of the amount of time on the timed activities (both billable and non-billable).</inlineHelpText>
        <label>Timer Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visible_To_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visible To Client</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>